FIx not centering content in info card and incorrectly overflowing text on wiki pages

--- a/css/wiki-page.css
+++ b/css/wiki-page.css
@@ -1,6 +1,5 @@
 .wiki-layout {
   display: block;
-  overflow: auto;
 }
 
 .wiki-layout * {
